# Pikachu

./: .gcc-flags.json  .gitignore  CMakeLists.txt  README.md  main.cc  main.cpp
lib/: CMakeLists.txt
lib/pikachu/: entity.hpp  item.hpp  object.hpp
lib/pikachu/base/: entity.hpp  item.hpp  object.hpp
lib/pikachu/system/: inventory.cpp  inventory.h  inventoryslot.cpp  inventoryslot.h
src/: CMakeLists.txt
src/entities/: player.cpp  player.h
src/items/: cheese.cpp  cheese.h
src/system/: inventory.cpp  inventory.h
test/: CMakeLists.txt
test/pikachu/: inventory.cpp
